--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,21 @@
             <nav>
                 <ul class="nav pull-right">
                         <% if signed_in? %>
-                            <li><%= link_to "Home", root_path %></li>
+                            <li id="fat-menu" class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    Dashboard <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><%= link_to "Login attempts", root_path %></li>
+                                   <li class="divider"></li>
+                                    <li><%= link_to "Accounting", root_path %></li>
+                                </ul>
+                            </li>
+
                         <% else %>                            
-                            <li><%= link_to "Sign in", signin_path %></li>
+                            <li><%= link_to "Sign in", signin_path
+                            %></li>
+                      <li><%= link_to "Create account", new_user_path %></li>
                         <% end %>
                 </ul>
             </nav>
