--- a/app/views/radpostauth/index.html.erb
+++ b/app/views/radpostauth/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Username</th>
-      <th>Password</th>
+      <!--<th>Password</th>-->
       <th>Auth status</th>
       <th>Login time</th>
       <th>NAS IP Address</th>
@@ -16,7 +16,7 @@
     <% @radpostauths.each do |radpostauth| %>
       <tr>
         <td><%= radpostauth.username %></td>
-        <th><%= radpostauth.pass %></th>
+        <!--<th><%= radpostauth.pass %></th>-->
         <td><%= radpostauth.reply %></td>
         <td><%= radpostauth.authdate %></td>
         <td><%= radpostauth.nasip %></td>
