Added functionality to add radius authenticatable users

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
                                     <li><%= link_to "Logins today",
                                     today_path %></li>
                                    <li class="divider"></li>
-                                    <li><%= link_to "Accounting", root_path %></li>
+                                    <li><%= link_to "Radius users", radchecks_path %></li>
                                 </ul>
                             </li>
 
