Fixed form labels

--- a/app/views/radchecks/_form.html.erb
+++ b/app/views/radchecks/_form.html.erb
@@ -17,7 +17,7 @@
     <%= f.text_field :username %>
   
   
-    <%= f.label :attr %>
+    <%= f.label :attribute %>
     <%= f.text_field :attr %>
     
 
